[FIX] tablesorter: ensure pager controls don't wrap around table
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/trunk@56701 b456876b-0849-0410-b77d-98878d47e9d5

--- a/themes/base_files/css/tiki_base.css
+++ b/themes/base_files/css/tiki_base.css
@@ -2956,6 +2956,10 @@ body.tiki.navbar-padding {
   transition: line-height 0.1s ease;
 }
 /*** Arrows ***/
+/* div around table */
+div.tablesorter-resizable-container {
+  clear: both;
+}
 .tablesorter {
   width: 100%;
   margin-bottom: 2px;
